# check_pdb_hook

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
pdb_hook_test/: __init__.py  check_pdb_hook.py
tests/: conftest.py  pdb_hook_test.py
tests/test_files/: 1_test.py
