[metadata]
name = check_pdb_hook
version = 0.0.2
description = Pre-commit hook to check exposed PDB statements in Python files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/conorfalvey/check_pdb_hook
download_url = https://github.com/conorfalvey/check_pdb_hook/archive/refs/tags/0.0.2.tar.gz
author = Conor Falvey
author_email = conor@carta.healthcare
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

install_requires =
    pytest

[options]
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    ccheck-pdb-hook = check_pdb_hook:main
